--- a/index.html
+++ b/index.html
@@ -190,11 +190,10 @@
                 <line x1="50" y1="30" x2="10" y2="70" stroke="currentColor" stroke-width="7px" stroke-linecap="round" />
                 <line x1="50" y1="30" x2="90" y2="70" stroke="currentColor" stroke-width="7px" stroke-linecap="round" />
             </svg>
-            ^
-            <!-- <svg id="speed-button-down" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+            <svg id="speed-button-down" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                 <line x1="50" y1="70" x2="10" y2="30" stroke="currentColor" stroke-width="7px" stroke-linecap="round" />
                 <line x1="50" y1="70" x2="90" y2="30" stroke="currentColor" stroke-width="7px" stroke-linecap="round" />
-            </svg> -->
+            </svg>
         </div>
     </div>
 </div></app-speed-input>
