--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="landing-main">De snelste weg om je hardlooptijden te berekenen. Zo ben je op en top voorbereid op je training of wedstrijd.</div>
         <div class="landing-main-short">De snelste weg om je hardlooptijden te berekenen.</div>
         <div class="row form-landing">
-            <input tabindex="1" class="input-landing" type="text" id="name" placeholder="Voornaam" data-bind="name">
+            <input tabindex="1" class="input-landing" type="text" id="name" placeholder="Voornaam" data-bind="name" data-bind-new="person">
             <input tabindex="2" onkeydown="allowNumbers(event)" class="input-landing" type="text" id="age" placeholder="Leeftijd" data-bind="age">
             <input tabindex="3" onkeydown="allowNumbers(event)" class="input-landing" type="text" id="weight" placeholder="Gewicht" data-bind="weight" data-target="pace">
             
