--- a/index.html
+++ b/index.html
@@ -262,12 +262,12 @@
                             <div class="panel-detail-col">
                                 <div class="panel-detail-value" data-display="age" data-resolve="age">&nbsp;</div>
                                 <div class="panel-detail-value" #else>--</div>
-                                <div class="panel-detail-label">Leeftijd</div>
+                                <div class="panel-detail-label">Jaar</div>
                             </div>
                             <div class="panel-detail-col">
                                 <div class="panel-detail-value" data-display="weight" data-resolve="weight">&nbsp;</div>
                                 <div class="panel-detail-value" #else>--</div>
-                                <div class="panel-detail-label">Gewicht</div>
+                                <div class="panel-detail-label">KG</div>
                             </div>
                             <div class="panel-detail-col">
                                 <div class="panel-detail-value" data-display="negative-split-range"><span data-resolve="negative-split-range">&nbsp;</span>%</div>
@@ -283,11 +283,11 @@
                         <div class="row space">
                             <div class="panel-detail-col">
                                 <div class="panel-detail-value" data-resolve="kilometer-input">&nbsp;</div>
-                                <div class="panel-detail-label">Afstand</div>
+                                <div class="panel-detail-label">KM</div>
                             </div>
                             <div class="panel-detail-col">
-                                <div class="panel-detail-value" data-resolve="average-pace-min:average-pace-sec">&nbsp;</div>
-                                <div class="panel-detail-label">Tempo</div>
+                                <div class="panel-detail-value" data-resolve="speed">&nbsp;</div>
+                                <div class="panel-detail-label">KM/U</div>
                             </div>
                             <div class="panel-detail-col">
                                 <div class="panel-detail-value" data-resolve="hours:minutes:seconds">&nbsp;</div>
