--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="button btn-round spa-link right-form" data-target="pace"><img height="20px" src="./icons/Sluiten.svg"></div>
         <div class="form-fullscreen-body">
             <div class="form-fullscreen-question">Wat is je gewicht?</div>
-            <p>We vragen dit om een schatting te kunnen maken hoeveel calorieën je verbrandt</p>
+            <p>We vragen dit om een schatting te maken hoeveel calorieën je verbrandt</p>
             <div class="form-input-button">
                 <input tabindex="0" type="number" onkeydown="allowNumbers(event)" data-bind="weight" placeholder="Gewicht">
                 <svg tabindex="1" class="spa-link" data-target="pace" width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
