--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 </div></app-pace-input>
                                     <app-speed-input><div class="time-wrapper">
     <div class="input-speed">
-        <span tabindex="3" id="speed" role="textbox" contenteditable>0,0</span><span> km/u</span>
+        <span tabindex="3" id="speed" role="textbox" contenteditable="true">0,0</span><span> km/u</span>
     </div>
     <div class="time-buttons-right">
         <div class="time-buttons">
