--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="background blue-sky">
+        <div class="background dry">
             <div class="background-shade">
                 <div class="header">
                     <div class="weather">
