update clickable button

--- a/index.html
+++ b/index.html
@@ -36,11 +36,44 @@
         </div>
     </div>
 
-    <div class="footer-buttons">
+    <!-- <div class="footer-buttons">
         <div class="row right">
-            <div id="facts" class="btn-white body-facts"><img height="20px" style="margin: 10px 0; border-right: solid 1px black; padding-right: 15px; margin-right: 15px;" src="./icons/Body facts.svg"><span id="factsText">Body Fact</span></div>
+            <div id="facts" class="btn-white body-facts"><img height="30px" class="body-facts-img" src="./icons/Body facts.svg"><span id="factsText">Body Fact</span></div>
         </div>
+    </div> -->
+
+    <div class="footer right">
+        <app-fact-button><div class="btn-icon" id="button">
+    <div class="icon icon-big">&#129504;</div>
+    <div class="animation-wrapper">
+        <div class="icon-label-wrapper">
+            <div class="icon-wrapper">
+                <div class="icon icon-small">&#129504;</div>
+                <div class="icon-text">Feitje van</div>
+            </div>
+            <div class="label-wrapper">WIMH</div>
+        </div>
+        <div class="btn-expandable-text" id="factsText"></span>
     </div>
+</div></app-fact-button>
+        <!-- <div class="row right">
+            <div class="btn-expandable" id="facts">
+                <div class="row">
+                    <div class="btn-icon-group-expanded">
+                        <div class="btn-icon-wrapper-expanded">
+                            <span class="btn-icon"></span>
+                            <span class="btn-icon-label">Feitje van</span>
+                        </div>
+                        <div class="btn-icon-WIMH">
+                            <span>WIMH</span>
+                        </div>
+                    </div>
+                    <div class="btn-expandable-text" id="factsText"></span>
+                </div>
+            </div>
+        </div> -->
+    </div>
+
 </div></app-landing>
                 <app-negative-split><div class="page form" id="negative-split" data-escapable="pace">
     <div class="form-fullscreen">
