--- a/index.html
+++ b/index.html
@@ -43,7 +43,19 @@
     </div> -->
 
     <div class="footer right">
-        
+        <app-fact-button><div class="btn-icon" id="button">
+    <div class="icon icon-big">&#129504;</div>
+    <div class="animation-wrapper">
+        <div class="icon-label-wrapper">
+            <div class="icon-wrapper">
+                <div class="icon icon-small">&#129504;</div>
+                <div class="icon-text">Feitje van</div>
+            </div>
+            <div class="label-wrapper">WIMH</div>
+        </div>
+        <div class="btn-expandable-text" id="factsText"></div>
+    </div>
+</div></app-fact-button>
         <!-- <div class="row right">
             <div class="btn-expandable" id="facts">
                 <div class="row">
