--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
+        <title>WIMH</title>
+        <meta name="description" content="De snelste weg om je hardlooptijden te berekenen. Zo ben je op en top voorbereid op je training of wedstrijd." />
+        <meta property="og:title" content="WIMH" />
+        <meta property="og:url" content="https://www.watismijnhardlooptijd.nl/" />
+        <meta property="og:description" content="De snelste weg om je hardlooptijden te berekenen" />
+        <meta property="og:image" content="//boksie.github.io//images/dry-300x200.png" />
     </head>
     <body>
         <div class="background dry">
