--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta property="og:title" content="WIMH" />
         <meta property="og:url" content="https://www.watismijnhardlooptijd.nl/" />
         <meta property="og:description" content="De snelste weg om je hardlooptijden te berekenen" />
-        <meta property="og:image" content="//boksie.github.io//images/dry-300x200.png" />
+        <meta property="og:image" content="//images/dry-300x200.png" />
     </head>
     <body>
         <div class="background dry">
